************************
*** PMFv
***
************************

### Libraries

- porousBoundaryConditions

  - fixedHeadPressure/fixedHeadPressureSTL BCs have been deleted. They can be
  replaced by usual fixedValue while initialize values with the utility
  setBoundaryWaterLevel

### Solvers

- steadyGroundwaterFoam

  - seepage has been added (similar to transient solver groundwaterFoam)

- groundwater solvers

  - number of seepage cells is only displayed for serial simulation (parallel
  simulations give wrong value in terminal due to domain decomposition)

### Tutorials

- darcyFoam

  - fix input folder (0 -> 0.org) to avoid paraview visualizations

### utilities

- setBoundaryWaterLevel

  - replace setBoundaryHeadPressure as it can be used for potential or h
  - version option (2D/3D) has been replaced by field option (h/potential)

### Bug Fix

- groundwaterFoam/groundwater2DFoam: set deltah/dpotential=0 for seepage cells

- steadyGroundwaterFoam: set residual=0 for seepage cells

- pcVanGenuchten: fix Se computation when -VSMALL < h < 0


************************
*** PMFv2107
*** Bug Fix + tools folder 
************************

### General

- MNT (Modèle Numérique de Terrain) has been replaced by DEM (Digital
  Elevation Model) for file name, field name, comments...

### Tools

- new folder containing external tools (python/bash scripts) for the toolbox

- pmf_csvToEvent

  - python script to convert csv file extracted from simulations into event
  file. It can be used to recover 1D column unsaturated fluxes for example to
  inject in 2D watershed model. For usage, execute:

  python pmf_csvToEvent.py --help

### Tutorials

- Global

  - scripts are now compatible with python 3.

### Bug fixes

- Time-step management when (eventTimeTracking=false) has been fixed

************************
*** PMFv2102
*** Newton Algorithm for unsaturated solvers (groundwater)
************************

### Compilation

- Toolbox now accepts parallel compilation, run :
