@@ -25,37 +25,12 @@ forAll(composition.Y(), speciesi)
 
     CEqn.solve(mesh.solver("C"));
 
-    dCdTmax[speciesi] = gMax(mag(fvc::ddt(C))());
-    if (timeScheme == "Euler")
-    {
-        volScalarField dC2dT2(d2dt2Operator.fvcD2dt2(C));
-        dC2dT2max[speciesi] = 0;
-        forAll(dC2dT2, celli)
-        {
-            if(mag(dC2dT2[celli]) > dC2dT2max[speciesi])
-            {
-                Cmax[speciesi] = C[celli];
-                dC2dT2max[speciesi] = mag(dC2dT2[celli]);
-            }
-        }
-    }
-    else
-    {
-        volScalarField dC3dT3(d3dt3Operator.d3dt3(C));
-        dC3dT3max[speciesi] = 0;
-        forAll(dC3dT3, celli)
-        {
-            if(mag(dC3dT3[celli]) > dC3dT3max[speciesi])
-            {
-                Cmax[speciesi] = C[celli];
-                dC3dT3max[speciesi] = mag(dC3dT3[celli]);
-            }
-        }
-    }
+    dtManager[speciesi].updateDerivatives();
+
     Info<< "Concentration: Min(" << speciesName << ") = " << gMin(C.internalField()) 
         << " Max(" << speciesName << ") = " << gMax(C.internalField())
         << " mass(" << speciesName << ") = " << fvc::domainIntegrate(R*C*Saturation*eps).value()
-        << " dCmax = " << dCdTmax[speciesi]*runTime.deltaTValue()
+        << " dCmax = " << dtManager[speciesi].dVmax()*runTime.deltaTValue()
         << endl;
 
 }
